# study_cpp_interface

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  interface.h  main.cc  main.cpp  main.h  test.cc  test.h
test/: test.cc  test.h  test_interface.h
